# devilutionX_auroraos

./: CMakeLists.txt
CMake/: Assets.cmake  Dependencies.cmake
Source/: CMakeLists.txt  init.cpp  main.cpp  options.cpp
Source/controls/touch/: event_handlers.cpp  gamepad.cpp
Source/engine/: dx.cpp  sound.cpp
Source/platform/aurora_os/: AuroraOSAudio.cpp  AuroraOSAudio.hpp  CMakeLists.txt  ComposerAdapter.cpp  ComposerAdapter.hpp  DBus.cpp  DBus.hpp  DisplayBlankerController.cpp  DisplayBlankerController.hpp  GLFunctions.cpp  GLFunctions.hpp  GLUtils.cpp  GLUtils.hpp  InputAdapter.cpp  InputAdapter.hpp  StandartPaths.cpp  StandartPaths.hpp  TextureRotatorGLES.cpp  TextureRotatorGLES.hpp  Utilities.cpp  Utilities.hpp  VirtualPadSDLRender.cpp  VirtualPadSDLRender.hpp
Source/platform/aurora_os/devilution_launcher/: Application.cpp  Application.hpp  CMakeLists.txt  CMakeRC.cmake  DPIHandler.cpp  DPIHandler.hpp  LauncherController.cpp  LauncherController.hpp  LauncherModel.hpp  LauncherView.cpp  LauncherView.hpp  main.cpp
Source/platform/aurora_os/devilution_launcher/widgets/imgui/: ImguiExtension.cpp  ImguiExtension.h
Source/storm/: storm_svid.cpp
Source/utils/: display.cpp  display.h  paths.cpp
aurora_project/: CMakeLists.txt  org.diasurgical.devilutionx.desktop
aurora_project/rpm/: org.diasurgical.devilutionx.changes.in  org.diasurgical.devilutionx.changes.run.in  org.diasurgical.devilutionx.spec
aurora_project/smpq/: smpq
aurora_project/smpq/aarch64/: smpq
aurora_project/smpq/armv7hl/: smpq
aurora_project/smpq/i486/: smpq
aurora_project/smpq/x86_64/: smpq
tools/: build_and_install_smpq.sh
